Site local twitter card image

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,19 +49,19 @@
     {% elsif page.tags contains 'president' %}
     <meta name="twitter:image:src" content="{{ site.url }}images/post/post_president.png" />
     {% elsif page.categories contains 'criminality' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_crime.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_crime.png" />
     {% elsif page.categories contains 'agrarian' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_agrarian.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_agrarian.png" />
     {% elsif page.categories contains 'environment' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_env.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_env.png" />
     {% elsif page.categories contains 'foreign affairs' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_foreign.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_foreign.png" />
     {% elsif page.categories contains 'business' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_business.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_business.png" />
     {% elsif page.categories contains 'peace process' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_peace.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_peace.png" />
     {% elsif page.categories contains 'opinion' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}site/post_opinion.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_opinion.png" />
     {% else %}
     <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png" />
     {% endif %}
