--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,4 +1,4 @@
-<div id="related_posts_block" class="block block_default_fonts">
+<div id="related_posts_block" class="block block_margin_top block_default_fonts">
     <h1>Related Events</h1><div class="right_filler">&nbsp;</div>
     <div class="entries">
         {% comment %}
