--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -1,11 +1,8 @@
 <div id="nav_top">
     <ul>
-        <li>
-            <a href="/">{{ site.title }}</a>
-        </li>
 
-        <li class="dropdown">
-            <span>News&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i></span>
+        <li class="navicon dropdown">
+            <a href="/">≡</a>
             <div class="dropdown_content">
                 <a href="/news/headline/">President</a>
                 <a href="/news/criminality/">Criminality</a>
@@ -17,13 +14,28 @@
                 <a href="/news/other/">Other News</a>
                 <hr>
                 <a href="/opinion/">Opinions</a>
+                <hr>
+
+                {% for item in site.data.socmed %}
+                <a href="{{ item.link }}" target="{{ item.target }}" alt="{{ item.name }}"
+                   data-toggle="tooltip"
+                   data-placement="top"
+                   title="{{ item.message }}">
+                    <i class="{{ item.fa_icon }}" aria-hidden="true"></i>&nbsp;{{ item.name }}
+                </a>
+                {% endfor %}
+
             </div>
         </li>
 
+        <li class="title">
+            <a href="/">{{ site.title }}</a>
+        </li>
+
         {% if site.development %}
-        <li class="dropdown">
+        <li class="dropdown right">
             <a href="/info/" class="dropdown_link">Info&nbsp;&nbsp;<i class="fa fa-angle-down fa-lg" aria-hidden="true"></i></a>
-            <div class="dropdown_content">
+            <div class="dropdown_content dropdown_content_right">
                 <a href="/info/law/">Law</a>
                 <a href="/info/people/">People</a>
                 <a href="/info/places/">Places</a>
@@ -36,7 +48,9 @@
         {% endif %}
     </ul>
 
+    {% comment %}
     <ul>
         {% include links_social_media.html %}
     </ul>
+    {% endcomment %}
 </div>
