--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -57,17 +57,17 @@ header {
             background-color: $color_button_bg;
         }
 
+        padding-left: 6px;
+        padding-top: 7px;
+
         li {
             @include compact;
             float: left;
             &.dropdown { float: left; }
-            &.right { float: right; }
 
-            &.right {
-                float: right;
-                @include max-screen(720px) {
-                    float: left;
-                }
+            margin-bottom: 6px;
+            @include max-screen(720px) {
+                margin-bottom: 4px;
             }
         }
 
@@ -75,46 +75,38 @@ header {
         li a {
             @include compact;
             font-family: $font_nav;
+            font-size: $font_size_nav + 1;
             font-weight: bold;
             text-align: center;
             text-decoration: none;
+            text-transform: uppercase;
             color: $color_button_text;
             display: inline-block;
-            margin: 9px 7px 7px 7px;
-            padding: 6px 9px 5px 9px;
+
+            padding: 7px 5px 6px 5px;
+
             border: none;
             transition: background-color 0.1s ease;
             i.fa-angle-down {
                 font-weight: bold;
             }
-        }
-
-        li:first-child a {
-            font-family: $font_site_title;
-            font-size: $font_size_site_title;
-            @include max-screen(720px) {
-                font-size: $font_size_site_title + 2;
-            }
-            text-transform: uppercase;
-        }
-
-        li.dropdown > span {
             cursor: pointer;
-            font-size: $font_size_nav;
-            @include max-screen(720px) {
-                font-size: $font_size_nav;
-            }
-            text-transform: uppercase;
-            padding-bottom: 4px;
         }
 
-        li.dropdown > a {
-            font-size: $font_size_nav;
-            @include max-screen(720px) {
-                font-size: $font_size_nav;
+        li.title {
+            a {
+                font-family: $font_site_title;
+                font-size: $font_size_site_title;
+                @include max-screen(720px) {
+                    font-size: $font_size_site_title + 1;
+                }
             }
-            text-transform: uppercase;
-            padding-bottom: 4px;
+        }
+
+        li.navicon {
+            a {
+                font-size: $font_size_site_title + 4;
+            }
         }
 
         li > span:hover,
@@ -125,19 +117,11 @@ header {
             border-radius: $border_radius;
         }
 
-        li:first-child > a {
-        }
-
-
-
         // Dropdown menu
 
         li.dropdown {
             position: relative;
             display: inline-block;
-            @include max-screen(720px) {
-                float: right;
-            }
         }
 
         div.dropdown_content {
