--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -80,6 +80,7 @@ header {
             text-align: center;
             text-decoration: none;
             text-transform: uppercase;
+            letter-spacing: 0.5px;
             color: $color_button_text;
             display: inline-block;
 
