--- a/_includes/post_entry_latest.html
+++ b/_includes/post_entry_latest.html
@@ -10,9 +10,17 @@ Argument(s):
             <img src="{{ site.image_source }}{{ post.image.source }}"  class="thumbnail img_style_rounded"/>
             {% else %}
                 {% if include.post.video.source %}
+                    {% if site.development %}
+            <img src="/images/video_01_254x143.png" class="video_thumbnail img_style_rounded"/>
+                    {% else %}
             <img src="http://img.youtube.com/vi/{{ include.post.video.source }}/mqdefault.jpg" class="video_thumbnail_latest img_style_rounded"/>
+                    {% endif %}
                 {% else %}
+                    {% if site.development %}
+            <img src="/images/post/{{ include.post_image }}" class="thumbnail img_style_rounded"/>
+                    {% else %}
             <img src="{{ site.image_source }}{{ include.post_image }}" class="thumbnail img_style_rounded"/>
+                    {% endif %}
                 {% endif %}
             {% endif %}
             
