--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -111,53 +111,27 @@ $font_line_height_caption:      14px;
 $font_label:                    $font_sans;
 $font_size_label:               11px;
 
-// Compact components entries
-$font_compact_title:               $font_sans_thin;
-$font_size_compact_title:          12px;
-$font_line_height_compact_title:   16px;
-$font_compact_date:                $font_default;
-$font_size_compact_date:           $font_size_default;
-$font_line_height_compact_date:    $font_line_height_default;
-$font_compact_text:                $font_default;
-$font_size_compact_text:           $font_size_default;
-$font_line_height_compact_text:    $font_line_height_default;
-
 // Page and Post
-$font_page_title:               $font_heading;
-$font_size_page_title:          $font_size_heading;
-$font_line_height_page_title:   $font_size_heading + 4;
-$font_size_page_title_code:     $font_size_heading;
-$font_page_text:                $font_default;
-$font_size_page_text:           $font_size_default !global;
-$font_line_height_page_text:    $font_line_height_default !global;
-$font_page_meta:                $font_page_text;
-$font_size_page_meta:           $font_size_default;
-$font_line_height_page_meta:    $font_line_height_default;
+$font_page_title:                   $font_heading;
+$font_page_title_code:              $font_monospace;
+$font_page_meta:                    $font_default;
+$font_page_date:                    $font_default;
+$font_page_excerpt:                 $font_default;
+$font_page_text:                    $font_default;
 
-// News
-$font_news_title:               $font_heading;
-$font_news_date:                $font_default;
-$font_news_excerpt:             $font_default;
-$font_news_text:                $font_default;
-$font_size_news_title:          14px;
-$font_size_news_date:           $font_size_default;
-$font_size_news_excerpt:        $font_size_default;
-$font_size_news_text:           $font_size_default;
-$font_line_height_news_title:   16px;
-$font_line_height_news_date:    $font_line_height_default;
-$font_line_height_news_excerpt: $font_line_height_default;
-$font_line_height_news_text:    $font_line_height_default;
+$font_size_page_title:              $font_size_heading;
+$font_size_page_title_code:         $font_size_heading;
+$font_size_page_meta:               $font_size_default;
+$font_size_page_date:               $font_size_default;
+$font_size_page_excerpt:            $font_size_default;
+$font_size_page_text:               $font_size_default !global;
 
-// Related Post
-$font_related_post_title:               $font_serif_thin;
-$font_size_related_post_title:          14px;
-$font_line_height_related_post_title:   16px;
-$font_related_post_date:                $font_default;
-$font_size_related_post_date:           $font_size_default;
-$font_line_height_related_post_date:    $font_line_height_default;
-$font_related_post_excerpt:             $font_default;
-$font_size_related_post_excerpt:        $font_size_default;
-$font_line_height_related_post_excerpt: $font_line_height_default;
+$font_line_height_page_title:       $font_size_heading + 4;
+$font_line_height_page_title_code:  $font_size_heading + 4;
+$font_line_height_page_meta:        $font_line_height_default;
+$font_line_height_page_date:        $font_line_height_default;
+$font_line_height_page_excerpt:     $font_line_height_default;
+$font_line_height_page_text:        $font_line_height_default !global;
 
 // Quote
 $font_quote:                $font_sans;
@@ -167,12 +141,6 @@ $font_quote_author:         $font_serif_thin;
 $font_size_quote_author:    13px;
 $font_quote_context:        $font_serif_thin;
 $font_size_quote_context:   11px;
-
-// Current date/time
-$font_datetime_date:        $font_sans;
-$font_size_datetime_date:   $font_size_default + 2;
-$font_datetime_time:        $font_sans;
-$font_size_datetime_time:   $font_size_default + 2;
 
 // Aside
 $font_aside:                    $font_default;
@@ -189,6 +157,92 @@ $font_footnote_link:            $font_serif_thin;
 $font_size_footnote_link:       $font_size_default;
 $font_footnote:                 $font_serif;
 $font_size_footnote:            $font_size_default;
+
+
+
+
+
+// Index page
+//$font_news_title:               $font_heading;
+$font_news_date:                $font_default;
+$font_news_excerpt:             $font_default;
+$font_news_text:                $font_default;
+$font_size_news_title:          14px;
+$font_size_news_date:           $font_size_default;
+$font_size_news_excerpt:        $font_size_default;
+$font_size_news_text:           $font_size_default;
+$font_line_height_news_title:   16px;
+$font_line_height_news_date:    $font_line_height_default;
+$font_line_height_news_excerpt: $font_line_height_default;
+$font_line_height_news_text:    $font_line_height_default;
+
+
+
+// Block default font settings
+$font_hub_default_title:                $font_serif_thin;
+$font_hub_default_date:                 $font_default;
+$font_hub_default_excerpt:              $font_default;
+$font_hub_default_text:                 $font_default;
+
+$font_size_hub_default_title:           13px;
+$font_size_hub_default_date:            $font_size_default + 1;
+$font_size_hub_default_excerpt:         $font_size_default + 1;
+$font_size_hub_default_text:            $font_size_default + 1;
+
+$font_line_height_hub_default_title:    16px;
+$font_line_height_hub_default_date:     $font_line_height_default;
+$font_line_height_hub_default_excerpt:  $font_line_height_default;
+$font_line_height_hub_default_text:     $font_line_height_default;
+
+
+
+// Block compact font settings
+$font_hub_compact_title:                $font_sans_thin;
+$font_hub_compact_date:                 $font_default;
+$font_hub_compact_excerpt:              $font_default;
+$font_hub_compact_text:                 $font_default;
+
+$font_size_hub_compact_title:           12px;
+$font_size_hub_compact_date:            $font_size_default;
+$font_size_hub_compact_excerpt:         $font_size_default;
+$font_size_hub_compact_text:            $font_size_default;
+
+$font_line_height_hub_compact_title:    16px;
+$font_line_height_hub_compact_date:     $font_line_height_default;
+$font_line_height_hub_compact_excerpt:  $font_line_height_default;
+$font_line_height_hub_compact_text:     $font_line_height_default;
+
+
+
+// Related Post
+$font_related_post_title:               $font_serif_thin;
+$font_size_related_post_title:          14px;
+$font_line_height_related_post_title:   16px;
+$font_related_post_date:                $font_default;
+$font_size_related_post_date:           $font_size_default;
+$font_line_height_related_post_date:    $font_line_height_default;
+$font_related_post_excerpt:             $font_default;
+$font_size_related_post_excerpt:        $font_size_default;
+$font_line_height_related_post_excerpt: $font_line_height_default;
+
+
+
+// Quotations
+$font_quotes:               $font_sans;
+$font_quotes_author:        $font_serif_thin;
+$font_quotes_context:       $font_serif_thin;
+$font_size_quotes:          14px;
+$font_size_quotes_author:   13px;
+$font_size_quotes_context:  11px;
+$font_line_height_quotes:   $font_size_quote + 4;
+
+// Current date/time
+$font_datetime_date:        $font_sans;
+$font_size_datetime_date:   $font_size_default + 2;
+$font_datetime_time:        $font_sans;
+$font_size_datetime_time:   $font_size_default + 2;
+
+
 
 // Footer
 $font_footer:                   $font_serif;
