--- a/_sass/layout_info.scss
+++ b/_sass/layout_info.scss
@@ -5,10 +5,10 @@ section.info_column_main {
         li,
         p > a,
         li > a {
-            @include set_font($font_news_text, $font_size_news_text, $color_news_text);
-            line-height: $font_line_height_news_text;
+            @include set_font($font_page_text, $font_size_page_text, $color_page_text);
+            line-height: $font_line_height_page_text;
             @include max-screen(720px) {
-                line-height: $font_line_height_news_text + 2;
+                line-height: $font_line_height_page_text + 2;
             }
         }
     }
@@ -78,10 +78,10 @@ section.info_column_main {
         li,
         p > a,
         li > a {
-            @include set_font($font_news_text, $font_size_news_text, $color_news_text);
-            line-height: $font_line_height_news_text;
+            @include set_font($font_page_text, $font_size_page_text, $color_page_text);
+            line-height: $font_line_height_page_text;
             @include max-screen(720px) {
-                line-height: $font_line_height_news_text + 2;
+                line-height: $font_line_height_page_text + 2;
             }
         }
     }
