--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -69,7 +69,7 @@ section.post_column_main {
         line-height: $font_line_height_page_text + 12;
 
         @include max-screen(720px) {
-            @include set_font($font_page_text, $font_size_page_text + 2, $color_page_text);
+            @include set_font($font_page_text, $font_size_page_text + 3, $color_page_text);
             line-height: $font_line_height_page_text + 4;
         }
         @media print {
@@ -225,7 +225,19 @@ section.post_column_main {
             @include compact;
         }
 
-        & > p,
+
+        @include max-screen(720px) {
+            $font_size_page_title: $font_size_page_title - 10;
+            $font_line_height_page_title: $font_line_height_page_title - 6;
+            h1 { font-size: $font_size_page_title - 0; line-height: $font_line_height_page_title;     }
+            h2 { font-size: $font_size_page_title - 0; line-height: $font_line_height_page_title - 2; }
+            h3 { font-size: $font_size_page_title - 1; line-height: $font_line_height_page_title - 2; }
+            h4 { font-size: $font_size_page_title - 1; line-height: $font_line_height_page_title - 2; }
+            h5 { font-size: $font_size_page_title - 2; line-height: $font_line_height_page_title - 2; }
+            h6 { font-size: $font_size_page_title - 2; line-height: $font_line_height_page_title - 2; }
+        }
+
+                & > p,
         & > p a {
             margin: 0;
             padding: 0;
