--- a/_sass/quote.scss
+++ b/_sass/quote.scss
@@ -16,30 +16,30 @@
         @include compact;
 
         &.qtext {
-            @include set_font($font_quote, $font_size_quote, $color_quote_text, normal, normal);
+            @include set_font($font_quotes, $font_size_quotes, $color_quotes_text, normal, normal);
             @include max-screen(720px) {
-                font-size: $font_size_quote + 1;
+                font-size: $font_size_quotes + 1;
             }
-            line-height: $font_line_height_quote;
+            line-height: $font_line_height_quotes;
             i.fa-quote-left {
                 color: lighten($color_sidebar_label, 15%);
             }
         }
 
         &.qauthor {
-            @include set_font($font_quote_author, $font_size_quote_author, $color_quote_author);
+            @include set_font($font_quotes_author, $font_size_quotes_author, $color_quotes_author);
             text-transform: uppercase;
             padding-top: 10px;
         }
 
         &.context {
-            @include set_font($font_quote_context, $font_size_quote_context, $color_quote_context);
+            @include set_font($font_quotes_context, $font_size_quotes_context, $color_quotes_context);
             font-style: italic;
-            line-height: $font_size_quote_context + 4;
+            line-height: $font_size_quotes_context + 4;
             @include max-screen(720px) {
-                line-height: $font_size_quote_context + 4;
+                line-height: $font_size_quotes_context + 4;
             }
-            color: lighten($color_quote_author, 15%);
+            color: lighten($color_quotes_author, 15%);
             margin-left: 20px;
             padding-top: 5px;
         }
