--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -60,20 +60,13 @@ div.section_container {
         flex-direction: row;
     }
 
-    div.left_container,
-    div.right_container {
-        //float: left;
+    div.container {
 
         @include max-screen(1024px) {
             width: 100%;
         }
 
-        $container_width: 100%;
-
         @include min-screen(1024px + 1px) {
-            //width: calc(25% - 15px);
-            max-width: calc(33% - 10px);
-            max-width: calc($container_width / 3 - 40px);
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -92,26 +85,6 @@ div.section_container {
         &:first-of-type {
         }
     }
-
-    div.right_container {
-        float: right;
-    }
-
-        /*
-        div.left_container {
-            margin-right: 10px;
-            @include max-screen(1024px) {
-                margin-right: 0;
-            }
-        }
-
-        div.right_container {
-            margin-left: 10px;
-            @include max-screen(1024px) {
-                margin-left: 0;
-            }
-        }
-        */
 
     div.container_border_thin {
         border-top: 1px solid $color_primary;
