--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -82,10 +82,8 @@ div.block {
             }
 
             img.video_thumbnail_latest {
-                width: 244px;
-                width: 254px;
-                height: 137px;
-                height: 143px;
+                width: 100%;
+                height: 100%;
                 @include max-screen(720px) {
                     width: 100%;
                     height: 100%;
