--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -122,8 +122,7 @@ div.container_right_margin_20 {
 }
 
 div.image_container {
-    div.left_container,
-    div.right_container {
+    div.container {
         border-top: none;
     }
     img {
