--- a/_sass/layout_info.scss
+++ b/_sass/layout_info.scss
@@ -12,67 +12,7 @@ section.info_column_main {
             }
         }
     }
-
-    div.branch_definition {
-        width: 100%;
-        float: left;
-        margin: 15px 0 15px 0;
-
-        div.block > div.entries > div.entry {
-            float: left;
-            @include max-screen(720px) {
-                width: 100%;
-                margin-left: 0;
-            }
-            @include min-screen(720px + 1px) {
-                width: calc(33% - 10px);
-                margin-left: 15px;
-                margin-top: 0;
-            }
-        }
-
-        div.block > div.entries > div.entry:first-of-type {
-            @include min-screen(720px + 1px) {
-                margin-left: 0;
-            }
-        }
-    }
-
-    div.left_container,
-    div.mid_container,
-    div.right_container {
-        float: left;
-        margin-top: 15px;
-
-        @include max-screen(1024px) {
-            width: 100%;
-            margin-bottom: 15px;
-        }
-
-        @include min-screen(1024px + 1px) {
-            width: calc(60%);
-        }
-
-        border-top: 3px solid $color_primary;
-
-        div.block {
-            h1 {
-                width: 100%;
-                display: inline-block;
-            }
-            h1 + p {
-                margin: 10px 0 0px 0;
-                padding-top: 10px;
-            }
-
-            div.entries > div.entry {
-                h2, h2 > a {
-                    //font-weight: normal;
-                }
-            }
-        }
-    }
-
+/*
     div.block > div.entries > div.entry {
         p,
         li,
@@ -85,4 +25,5 @@ section.info_column_main {
             }
         }
     }
+*/
 }
