--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,23 +52,23 @@
     {% endcomment %}
 
     {% elsif page.tags contains 'president' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_president.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_president.png?4362984378" />
     {% elsif page.categories contains 'criminality' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_crime.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_crime.png?4362984378" />
     {% elsif page.categories contains 'agrarian' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_agrarian.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_agrarian.png?4362984378" />
     {% elsif page.categories contains 'environment' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_env.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_env.png?4362984378" />
     {% elsif page.categories contains 'foreign affairs' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_foreign.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_foreign.png?4362984378" />
     {% elsif page.categories contains 'business' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_business.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_business.png?4362984378" />
     {% elsif page.categories contains 'peace process' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_peace.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_peace.png?4362984378" />
     {% elsif page.categories contains 'opinion' %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_opinion.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/post/post_opinion.png?4362984378" />
     {% else %}
-    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png" />
+    <meta name="twitter:image:src" content="{{ site.url }}images/twitter_summary_card_01.png?4362984378" />
     {% endif %}
 
     <!-- Stylesheets -->
