Use categories instead of tags to search keywords

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,7 +51,7 @@
     <meta name="twitter:image:src" content="http://img.youtube.com/vi/{{ post.video.source }}/mqdefault.jpg" />
     {% endcomment %}
 
-    {% elsif page.tags contains 'president' %}
+    {% elsif page.categories contains 'president' %}
     <meta name="twitter:image:src" content="{{ site.url }}images/post/post_president.png?4362984378" />
     {% elsif page.categories contains 'criminality' %}
     <meta name="twitter:image:src" content="{{ site.url }}images/post/post_crime.png?4362984378" />
