Format twitter card image display in post layout

--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -193,6 +193,13 @@ section.post_column_main {
                 }
             }
         }
+        img {
+            width: 55px;
+            height: auto;
+            float: left;
+            margin-top: 3px;
+            margin-right: 10px;
+        }
     }
 
 
