Fix post image source url

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,7 +43,7 @@
     <meta name="twitter:title" content="{{ page.title }}" />
     <meta name="twitter:description" content="{{ page.excerpt }}" />
     {% if page.image.source %}
-    <meta name="twitter:image:src" content="{{ site.url }}{{ page.image.source }}" />
+    <meta name="twitter:image:src" content="{{ site.image_source }}{{ page.image.source }}" />
 
     {% comment %}
     Twitter Card Validator result: Unable to render Card preview
