--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -75,13 +75,15 @@ div.block {
                 margin-right: 10px;
             }
 
+            img.thumbnail_latest {
+                width: 100%;
+                height: 100%;
+                margin-bottom: 10px;
+            }
+
             img.video_thumbnail_latest {
                 width: 100%;
                 height: 100%;
-                @include max-screen(720px) {
-                    width: 100%;
-                    height: 100%;
-                }
                 margin-bottom: 10px;
             }
             
