--- a/_sass/block.scss
+++ b/_sass/block.scss
@@ -155,7 +155,7 @@ div.block_default_fonts {
         div.entry {
             h2, h2 > a {
                 @include block_entry_heading($font_hub_default_title, $font_size_hub_default_title, $color_hub_entry_title);
-                line-height: $font_line_height_hub_default_title;
+                line-height: $font_line_height_hub_default_title + 2;
                 @include max-screen(720px) {
                     font-size: $font_size_hub_default_title + 2;
                     line-height: $font_line_height_hub_default_title + 3;
@@ -219,7 +219,7 @@ div.block_compact_fonts {
             }
             h2, h2 > a {
                 @include block_entry_heading($font_hub_compact_title, $font_size_hub_compact_title, $color_hub_entry_title);
-                line-height: $font_line_height_hub_compact_title;
+                line-height: $font_line_height_hub_compact_title + 2;
                 @include max-screen(720px) {
                     font-size: $font_size_hub_compact_title + 2;
                     line-height: $font_line_height_hub_compact_title + 3;
