Increase news post meta font size

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -121,9 +121,9 @@ $font_page_text:                    $font_default;
 
 $font_size_page_title:              $font_size_heading;
 $font_size_page_title_code:         $font_size_heading;
-$font_size_page_meta:               $font_size_default;
-$font_size_page_date:               $font_size_default;
-$font_size_page_excerpt:            $font_size_default;
+$font_size_page_meta:               $font_size_default + 1;
+$font_size_page_date:               $font_size_default + 1;
+$font_size_page_excerpt:            $font_size_default + 1;
 $font_size_page_text:               $font_size_default !global;
 
 $font_line_height_page_title:       $font_size_heading + 4;
