--- a/_includes/head.html
+++ b/_includes/head.html
@@ -101,7 +101,7 @@
     {% endif %}
 
     <!-- Twitter card -->
-    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@dutertetimes">
     <meta name="twitter:creator" content="@dutertetimes">
     <meta name="twitter:url" content="{{ page.url }}">
@@ -109,31 +109,6 @@
     <meta name="twitter:description" content="{{ page.excerpt }}">
     {% if page.image.source %}
     <meta name="twitter:image:src" content="{{ site.image_source }}{{ page.image.source }}">
-
-    {% comment %}
-    Twitter Card Validator result: Unable to render Card preview
-    {% elsif post.video.source %}
-    <meta name="twitter:image:src" content="http://img.youtube.com/vi/{{ post.video.source }}/mqdefault.jpg">
-    {% endcomment %}
-
-    {% elsif page.categories contains 'president' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.president.png">
-    {% elsif page.categories contains 'criminality' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.crime.png">
-    {% elsif page.categories contains 'agrarian' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.agrarian.png">
-    {% elsif page.categories contains 'environment' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.evnironment.png">
-    {% elsif page.categories contains 'foreign_affairs' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.foreign.png">
-    {% elsif page.categories contains 'business' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.business.png">
-    {% elsif page.categories contains 'peace_process' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.peace.png">
-    {% elsif page.categories contains 'opinion' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.opinion.png">
-    {% elsif page.categories contains 'press' %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/fb_post_02.1.press.png">
     {% else %}
     <meta name="twitter:image:src" content="{{ site.url }}/images/twitter_summary_card_01.png?4362984378">
     {% endif %}
