Remove extra characters after the twitter card image meta tag

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -110,7 +110,7 @@
     {% if page.image.source %}
     <meta name="twitter:image:src" content="{{ site.image_source }}{{ page.image.source }}">
     {% else %}
-    <meta name="twitter:image:src" content="{{ site.url }}/images/twitter_summary_card_01.png?4362984378">
+    <meta name="twitter:image:src" content="{{ site.url }}/images/twitter_summary_card_01.png">
     {% endif %}
 
     <!-- Stylesheets -->
