--- a/_includes/head.html
+++ b/_includes/head.html
@@ -110,7 +110,7 @@
     {% if page.image.source %}
     <meta name="twitter:image:src" content="{{ site.image_source }}{{ page.image.source }}">
     {% else %}
-    <meta name="twitter:image:src" content="{{ site.image_source }}/site/twitter_summary_card_01.png?{{ page.date | date: '%Y%m%d%k%M%' }}">
+    <meta name="twitter:image:src" content="{{ site.image_source }}/site/twitter_summary_card_01.png?{{ site.time | date: '%Y%m%d%k%M%' }}">
     {% endif %}
 
     <!-- Stylesheets -->
