--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -13,7 +13,7 @@
                 <a href="/news/foreign_affairs/">Foreign Affairs</a>
                 <a href="/news/other/">Other News</a>
                 <hr>
-                <a href="/opinion/">Opinions</a>
+                <a href="/topics/opinion">Opinions</a>
                 <a href="/news/peace_process/">Peace Process</a>
                 <hr>
                 <a href="/search/">Search</a>
